--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,13 @@
 spring:
   output.ansi.enabled: always
 
-  security:
-    user.name: james
-    user.password: password
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/spring-security-fundamentals-2020
+    username: postgres
+    password: postgres
+
+  jpa:
+    properties.hibernate:
+      jdbc.lob.non_contextual_creation: true
+      dialect: org.hibernate.dialect.PostgreSQLDialect
