--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     username: postgres
     password: postgres
 
-  jpa:
-    properties.hibernate:
-      jdbc.lob.non_contextual_creation: true
-      dialect: org.hibernate.dialect.PostgreSQLDialect
+#  jpa:
+#    properties.hibernate:
+#      jdbc.lob.non_contextual_creation: true
+#      dialect: org.hibernate.dialect.PostgreSQLDialect
